--- a/ecomm.css
+++ b/ecomm.css
@@ -69,7 +69,7 @@ body{
 .cart{
     position: fixed;
     top: 0;
-    right: -100%;
+    right: -300px;
     width: 300px;
     min-height: 100vh;
     padding: 20px;
@@ -211,6 +211,13 @@ body{
     justify-content: center;
 }
 
+.shop{
+    margin-top: 60px;
+    background-color: #edd9b3;
+    background-image: url("something.jpg");
+    border-radius: 10px;
+}
+
 .thirft{
     flex-basis: 30%;
     padding: 100px 0;
@@ -224,7 +231,22 @@ body{
     transition: transform 1s;
 }
 
+.thirft p{
+    text-align: center;
+    font-style: oblique;
+    font-size: 40px;
+    font-weight: bold;
+    color: #008080;
+    padding: 10px 0;
+}
+
+.thirft p:hover{
+    color: #800000;
+    transition: 0.5s;
+}
+
 .shop h1{
+    font-size: 70px;
     font-weight: bolder;
     font-family: Arial, Helvetica, sans-serif;
     color: #800000;
@@ -415,12 +437,11 @@ body{
 }
 
 
-/*--------contact----------
+/*--------contact----------*/
 
 #contact{
     padding: 20px;
-    margin: 10px;
-    color: #ababab;
+    color: #800000;
 }
 
 .contact-left{
@@ -437,9 +458,9 @@ body{
 
 .social-icons a{
     text-decoration: none;
-    font-size: 20px;
+    font-size: 30px;
     margin-right: 15px;
-    color: #ababab;
+    color: #8e5d4b;
     display: inline-block;
     transition: transform 0.5s;
 }
@@ -451,6 +472,8 @@ body{
 
 .btn.btn2{
     display: inline-block;
+    padding: 5px;
+    border-radius: 5px;
     background: #800000;
 }
 
@@ -476,8 +499,7 @@ form btn2{
     font-size: 18px;
     margin-top: 20px;
     cursor: pointer;
-}*/
-
+}
 
 /*-----------
 
