--- a/ecomm.css
+++ b/ecomm.css
@@ -212,7 +212,7 @@ body{
     margin-top: 60px;
     background-color: #edd9b3;
     background-image: url("something.jpg");
-    border-radius: 10px;
+    border-radius: 15px 100px;
 }
 
 
